# cookiecutter-python-project

./: README.rst  cookiecutter.json  requirements.txt
.github/workflows/: ci.yml
{{cookiecutter.package_name}}/: .coveragerc  .gitignore  Makefile  requirements.dev.in  setup.cfg  setup.py
{{cookiecutter.package_name}}/.github/workflows/: ci.yml
{{cookiecutter.package_name}}/docs/: Makefile
{{cookiecutter.package_name}}/docs/source/: conf.py
{{cookiecutter.package_name}}/test/: test_e2e.py
{{cookiecutter.package_name}}/tests/: test-dist.bash  test_examples.py
