[metadata]
name = {{cookiecutter.package_name}}
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
maintainer = {{cookiecutter.full_name}}
maintainer_email = {{cookiecutter.email}}
version = {{cookiecutter.version}}
description = {{cookiecutter.package_short_description}}
keywords = {{cookiecutter.package_name}}
license = {{cookiecutter.license}}
url = https://github.com/{{cookiecutter.github_user_name}}/{{cookiecutter.github_repo_name}}

[options]
packages =
    find:
python_requires = >={{cookiecutter.python_version_min}}
install_requires =
    # samplepackage1=sample.version.number1
    # samplepackage2=sample.version.number2
